# SEO-Dashboard

./: .gitignore  .sesskey  AGENTS.md  README.md  design.md  llmctx-full-fastcore.txt  main.py  pyproject.toml  routing.md  summary  test.db
.github/workflows/: deploy.yaml  test.yaml
_docs/: apilist.txt  article.html  article.html.md  cli.html  cli.html.md  content_mapper.html  content_mapper.html.md  content_parser.html  content_parser.html.md  gsc_client.html  gsc_client.html.md  gsc_insights.html  gsc_insights.html.md  gsc_storage.html  gsc_storage.html.md  index.html  index.html.md  index_tracking.html  index_tracking.html.md  keyword_ranking.html  keyword_ranking.html.md  llms-ctx-full.txt  llms-ctx.txt  models.html  models.html.md  robots.txt  schema_extractor.html  schema_extractor.html.md  schema_validator.html  schema_validator.html.md  search.json  seo_content_analysis.html  seo_content_analysis.html.md  seo_report.html  seo_report.html.md  seo_site_analysis.html  seo_site_analysis.html.md  sitemap.xml  sqlite.html  sqlite.html.md
archive/: 02_content_parser.ipynb  05_gsc_storage.ipynb  09_seo_report.ipynb  10_seo_content_analysis.ipynb  12_gsc_insights.ipynb
llm_docs/: fasthtml  fh_daisy
nbs/: 00_sqlite.ipynb  01_models.ipynb  02_content_parser.ipynb  02a_parser_metadata.ipynb  02b_parser_checks.ipynb  02c_parser_extractors.ipynb  02d_parser_utils.ipynb  03_article.ipynb  04_gsc_client.ipynb  05_gsc_storage.ipynb  05a_gsc_filters.ipynb  05b_gsc_queries.ipynb  05c_gsc_sync.ipynb  06_index_tracking.ipynb  08_content_mapper.ipynb  09_seo_report.ipynb  09a_report_articles.ipynb  09b_report_analysis.ipynb  09c_report_generator.ipynb  10_seo_content_analysis.ipynb  10a_content_checks.ipynb  10b_content_analysis.ipynb  11_seo_site_analysis.ipynb  12_gsc_insights.ipynb  12a_insights_trends.ipynb  12b_insights_intent.ipynb  12c_insights_keywords.ipynb  13_schema_validator.ipynb  14_schema_extractor.ipynb  15_keyword_ranking.ipynb  16_cli.ipynb  19_dspy_infer.ipynb  20_wuilt_client.ipynb  22_wuilt_sync.ipynb  23_wuilt_optimizer.ipynb  24_wuilt_cli.ipynb  _quarto.yml  apilist.txt  gpuvec_report.md  index.ipynb  (+5 more)
nbs/_docs/: index.html  index.md  llms.txt
sample/: design_questions.ipynb  example.md  example2.md  nbdev_llm.md  سباك_بالمدينة.md  شركة عزل اسطح بجدة.md  شركة عزل اسطح بمكة.md
seo_rat/: _modidx.py  article.py  cli.py  content_mapper.py  content_parser.py  dspy_infer.py  gsc_client.py  gsc_insights.py  gsc_storage.py  index_tracking.py  keyword_ranking.py  models.py  page_seo_audit.py  schema_extractor.py  schema_validator.py  seo_content_analysis.py  seo_report.py  seo_site_analysis.py  sqlite_db.py
seo_rat/content/: analysis.py  checks.py
seo_rat/gsc/: filters.py  queries.py  sync.py
seo_rat/insights/: intent.py  keywords.py  trends.py
seo_rat/parser/: checks.py  extractors.py  metadata.py  utils.py
seo_rat/report/: analysis.py  articles.py  generator.py
seootter/: _modidx.py  article.py  cli.py  content_mapper.py  dspy_infer.py  gsc_client.py  index_tracking.py  keyword_ranking.py  models.py  page_seo_audit.py  schema_extractor.py  schema_validator.py  semantic_search.py  seo_site_analysis.py  sqlite_db.py
seootter/content/: analysis.py  checks.py
seootter/gsc/: filters.py  queries.py  sync.py
seootter/insights/: intent.py  keywords.py  trends.py
seootter/parser/: checks.py  extractors.py  metadata.py  utils.py
seootter/report/: analysis.py  articles.py  generator.py
seootter/wuilt/: cli.py  client.py  optimizer.py  routes.py  sync.py
ui/: .sesskey  fh_llm.md  main.py
