[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "seo_rat"
dynamic = ["version"]
description = "seo rat is an SEO to give you some help to optimize your content based on markdown for sites like astor, quarto"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "abdelkareemkobo", email = "kareem01095134688@gmail.com" }]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "fastcore>=1.12.18",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.0",
    "lxml>=5.0.0",
    "nbdev>=3.0.12",
    "PyYAML>=6.0.0",
    "sqlmodel>=0.0.24",
    "python-dotenv>=1.2.1",
    "twine>=6.2.0",
    "ipykernel>=7.2.0",
    "polars>=1.39.3",
    "altair>=6.0.0",
    "pysymbol-llm>=0.0.5",
    "llms-txt>=0.0.6",
    "rich>=14.3.3",
    "python-fasthtml>=0.13.3",
    "trafilatura>=2.0.0",
    "html2text>=2025.4.15",
    "fhdaisy>=0.0.1",
    "pycountry>=26.2.16",
    "dspy>=2.6.0",
]

[project.urls]
Repository = "https://github.com/abdelkareemkobo/seo_rat"
Documentation = "https://abdelkareemkobo.github.io/seo_rat"

[project.scripts]

nbdev_preview = "nbdev.quarto:nbdev_preview"
seo-rat-sync = "seo_rat.cli:seo_rat_sync"
seo-rat-report = "seo_rat.cli:seo_rat_report"
seo-rat-audit = "seo_rat.cli:seo_rat_audit"
seo-rat-rank = "seo_rat.cli:seo_rat_rank"
seo-rat-trend = "seo_rat.cli:seo_rat_trend"
seo-rat-top-pages = "seo_rat.cli:seo_rat_top_pages"
seo-rat-wins = "seo_rat.cli:seo_rat_wins"
seo-rat-canob = "seo_rat.cli:seo_rat_canob"
seo-rat-index-check = "seo_rat.cli:seo_rat_index_check"
seo-rat-index-report = "seo_rat.cli:seo_rat_index_report"
seo-rat-crawl-errors = "seo_rat.cli:seo_rat_crawl_errors"
seo-rat-add-website = "seo_rat.cli:seo_rat_add_website"
seo-rat-list-websites = "seo_rat.cli:seo_rat_list_websites"
seo-rat-delete-website = "seo_rat.cli:seo_rat_delete_website"
seo-rat-compare = "seo_rat.cli:seo_rat_compare"
seo-rat-country-breakdown = "seo_rat.cli:seo_rat_country_breakdown"
seo-rat-schema-check = "seo_rat.cli:seo_rat_schema_check"
seo-rat-faq = "seo_rat.cli:seo_rat_faq"
seo-rat-add-tracked-keyword = "seo_rat.cli:seo_rat_add_tracked_keyword"
seo-rat-list-tracked-keywords = "seo_rat.cli:seo_rat_list_tracked_keywords"
seo-rat-delete-tracked-keyword = "seo_rat.cli:seo_rat_delete_tracked_keyword"

[project.entry-points.nbdev]
seo_rat = "seo_rat._modidx:d"

[tool.setuptools.dynamic]
version = { attr = "seo_rat.__version__" }

[tool.setuptools.packages.find]
include = ["seo_rat"]

[tool.nbdev]
repo = "seo_rat"
branch = "main"
user = "abdelkareemkobo"
doc_host = "https://abdelkareemkobo.github.io"
doc_baseurl = "/seo_rat/"
git_url = "https://github.com/abdelkareemkobo/seo_rat/"
lib_path = "seo_rat"
nbs_path = "nbs"
custom_sidebar = false
dev_requirements = ["pysymbol_llm", "llms-txt"]
