[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "seootter"
dynamic = ["version"]
description = "seo otter is an SEO to give you some help to optimize your content based on markdown for sites like astor, quarto"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "abdelkareemkobo", email = "kareem01095134688@gmail.com" }]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "fastcore>=1.12.18",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.0",
    "lxml>=5.0.0",
    "nbdev>=3.0.12",
    "PyYAML>=6.0.0",
    "sqlmodel>=0.0.24",
    "python-dotenv>=1.2.1",
    "twine>=6.2.0",
    "ipykernel>=7.2.0",
    "polars>=1.39.3",
    "altair>=6.0.0",
    "pysymbol-llm>=0.0.5",
    "llms-txt>=0.0.6",
    "rich>=14.3.3",
    "python-fasthtml>=0.13.3",
    "trafilatura>=2.0.0",
    "html2text>=2025.4.15",
    "fhdaisy>=0.0.1",
    "pycountry>=26.2.16",
    "dspy>=2.6.0",
    "ipywidgets>=8.1.8",
    "botocore>=1.43.17",
]

[project.urls]
Repository = "https://github.com/abdelkareemkobo/seootter"
Documentation = "https://abdelkareemkobo.github.io/seootter"

[project.scripts]

nbdev_preview = "nbdev.quarto:nbdev_preview"
seo-otter-sync = "seootter.cli:seo_otter_sync"
seo-otter-report = "seootter.cli:seo_otter_report"
seo-otter-audit = "seootter.cli:seo_otter_audit"
seo-otter-rank = "seootter.cli:seo_otter_rank"
seo-otter-trend = "seootter.cli:seo_otter_trend"
seo-otter-top-pages = "seootter.cli:seo_otter_top_pages"
seo-otter-wins = "seootter.cli:seo_otter_wins"
seo-otter-canob = "seootter.cli:seo_otter_canob"
seo-otter-index-check = "seootter.cli:seo_otter_index_check"
seo-otter-index-report = "seootter.cli:seo_otter_index_report"
seo-otter-crawl-errors = "seootter.cli:seo_otter_crawl_errors"
seo-otter-add-website = "seootter.cli:seo_otter_add_website"
seo-otter-list-websites = "seootter.cli:seo_otter_list_websites"
seo-otter-delete-website = "seootter.cli:seo_otter_delete_website"
seo-otter-compare = "seootter.cli:seo_otter_compare"
seo-otter-country-breakdown = "seootter.cli:seo_otter_country_breakdown"
seo-otter-schema-check = "seootter.cli:seo_otter_schema_check"
seo-otter-faq = "seootter.cli:seo_otter_faq"
seo-otter-add-tracked-keyword = "seootter.cli:seo_otter_add_tracked_keyword"
seo-otter-list-tracked-keywords = "seootter.cli:seo_otter_list_tracked_keywords"
seo-otter-delete-tracked-keyword = "seootter.cli:seo_otter_delete_tracked_keyword"

[project.entry-points.nbdev]
seootter = "seootter._modidx:d"

[tool.setuptools.dynamic]
version = { attr = "seootter.__version__" }

[tool.setuptools.packages.find]
include = ["seootter"]

[tool.nbdev]
repo = "seootter"
branch = "main"
user = "abdelkareemkobo"
doc_host = "https://abdelkareemkobo.github.io"
doc_baseurl = "/seootter/"
git_url = "https://github.com/abdelkareemkobo/seootter/"
lib_path = "seootter"
nbs_path = "nbs"
custom_sidebar = false
dev_requirements = ["pysymbol_llm", "llms-txt"]
